# stimmy

./: Cargo.toml  PROS_AND_CONS.md  README.md  jeff_pic_b64  package-lock.json  package.json  webpack.config.js
css/: menu.css  styles.css
images/ceos/: andrew_b64  bill_b64  jack_b64  larry_b64  mark_b64  marty_b64  robert_b64  satya_b64  steve_b64  sundar_b64  tim_b64  warren_b64
src/: context.rs  handlebars_helpers.rs  index.js  main.rs
src/controllers/: checkbox_list_controller.js  cropper_controller.js  filters_controller.js  form_controller.js  hello_controller.js  imagepreview_controller.js  toggle_controller.js
templates/: bump_count_form.hbs  create_profile_form.hbs  create_profile_page.html.hbs  crop_page.html.hbs  description.html.hbs  edit_profile_page.hbs  filter.hbs  filter.html.hbs  head.hbs  head.html.hbs  index.hbs  index.html.hbs  list_profiles_page.hbs  list_profiles_page.html.hbs  load_spinner.html.hbs  menu.hbs  show_profile_page.hbs  show_profile_page.html.hbs  user_search_results.hbs
